Add missing dependencies to setup.py

--- a/non_sensitive/presidio-gcp-dlp.ipynb
+++ b/non_sensitive/presidio-gcp-dlp.ipynb
@@ -86,7 +86,7 @@
     "import pandas as pd\n",
     "from IPython.display import display\n",
     "\n",
-    "import sanitization_lib\n",
+    "from suggest_search_tools import sanitization_lib\n",
     "\n",
     "pd.set_option(\"display.max_rows\", 500)\n",
     "pd.set_option(\"display.max_columns\", None)\n",
