Switch table name to a table with the new schema

--- a/nightly-job/data-validation-checks.ipynb
+++ b/nightly-job/data-validation-checks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "724781ec-5c70-4345-b4d1-e2870db94642",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b442084d-104c-44cd-8ade-2d7deedb2edb",
    "metadata": {},
    "outputs": [],
@@ -25,12 +25,12 @@
     "\n",
     "args = Args()\n",
     "args.data_validation_origin = 'mozdata.search_terms_unsanitized_analysis.prototype_data_validation_metrics'\n",
-    "args.data_validation_reporting_destination = 'mozdata.search_terms_unsanitized_analysis.prototype_data_validation_report'"
+    "args.data_validation_reporting_destination = 'mozdata.search_terms_unsanitized_analysis.prototype_data_validation_reports_v1'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4e873fa8-8baa-41b3-8f8e-268568691759",
    "metadata": {},
    "outputs": [],
@@ -40,10 +40,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f0754f05-7900-4a1b-9d5f-e912c1fa0fd7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data validation results recorded successfully!\n",
+      "Data validation results recorded successfully!\n",
+      "Data validation results recorded successfully!\n",
+      "Data validation results recorded successfully!\n",
+      "Data validation results recorded successfully!\n",
+      "Data validation results recorded successfully!\n",
+      "Data validation results recorded successfully!\n",
+      "Data validation results recorded successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "result = record_validation_results(val_df, args.data_validation_reporting_destination)"
    ]
