Extract a one percent sample of unsanitized terms for eventual suibmission to a table.

--- a/nightly-job/nightly-sanitization-pipeline.ipynb
+++ b/nightly-job/nightly-sanitization-pipeline.ipynb
@@ -44,38 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "ffc5aca5-bb6f-43ee-b865-a971ad38edc8",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n"
+      "TOTAL RUN (31818, 11)\n",
+      "one percent sample size (1, 11)\n"
      ]
     },
     {
@@ -89,7 +69,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n"
+      "[[]]\n",
+      "TOTAL RUN (31818, 11)\n",
+      "one percent sample size (1, 11)\n"
      ]
     },
     {
@@ -103,13 +85,95 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n",
+      "[[]]\n",
+      "TOTAL RUN (31818, 11)\n",
+      "one percent sample size (1, 11)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[]]\n",
+      "TOTAL RUN (31818, 11)\n",
+      "one percent sample size (1, 11)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[]]\n",
+      "TOTAL RUN (31818, 11)\n",
+      "one percent sample size (1, 11)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[]]\n",
+      "TOTAL RUN (31818, 11)\n",
+      "one percent sample size (1, 11)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[]]\n",
+      "TOTAL RUN (15413, 11)\n",
+      "one percent sample size (1, 11)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[]]\n",
+      "HERE LIES THE DATA\n",
+      "(7, 11)\n",
       "New row representing job run successfully added.\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('../assets/Names_2010Census.csv')\n",
+    "df = pd.read_csv('Names_2010Census.csv')\n",
     "census_surnames = [str(name).lower() for name in df.name]\n",
     "\n",
     "start_time = datetime.utcnow()\n",
@@ -120,9 +184,15 @@
     "    summary_run_data = {}\n",
     "    summary_language_data = {}\n",
     "    \n",
+    "    data_validation_sample = pd.DataFrame()\n",
+    "    \n",
     "    unsanitized_search_term_stream = stream_search_terms() # load unsanitized search terms\n",
     "    for raw_page in unsanitized_search_term_stream:\n",
     "        total_run += raw_page.shape[0]\n",
+    "        \n",
+    "        one_percent_sample = raw_page.sample(frac = 0.01)\n",
+    "        data_validation_sample = data_validation_sample.append(one_percent_sample)\n",
+    "\n",
     "        pii_in_query_mask, run_data, language_data = await detect_pii(raw_page['query'], census_surnames)\n",
     "        sanitized_page = raw_page.loc[~numpy.array(pii_in_query_mask)] # ~ reverses the mask so we get the queries WITHOUT PII in them\n",
     "        total_deemed_sanitary += sanitized_page.shape[0]\n",
