--- a/nightly-job/mimic-production-tables-in-mozdata.ipynb
+++ b/nightly-job/mimic-production-tables-in-mozdata.ipynb
@@ -40,6 +40,7 @@
     "# For populating metadata table (2)\n",
     "args.sanitized_term_destination = 'mozdata.search_terms_unsanitized_analysis.prototype_sanitized_data'\n",
     "args.job_reporting_destination = 'mozdata.search_terms_unsanitized_analysis.prototype_sanitization_job_metadata'\n",
+    "args.unsanitized_term_sample_destination = 'mozdata.search_terms_unsanitized_analysis.prototype_unsanitized_sample_data'\n",
     "\n",
     "# For populating languages table (3) \n",
     "args.job_metadata_origin = 'mozdata.search_terms_unsanitized_analysis.prototype_sanitization_job_metadata'\n",
@@ -172,7 +173,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../assets/Names_2010Census.csv')\n",
+    "df = pd.read_csv('Names_2010Census.csv')\n",
     "census_surnames = [str(name).lower() for name in df.name]\n",
     "\n",
     "start_time = datetime.utcnow()\n",
@@ -182,10 +183,17 @@
     "    total_deemed_sanitary = 0\n",
     "    summary_run_data = {}\n",
     "    summary_language_data = {}\n",
+    "    yesterday = datetime.utcnow().date() - timedelta(days=1)\n",
+    "    \n",
+    "    data_validation_sample = pd.DataFrame()\n",
     "    \n",
     "    unsanitized_search_term_stream = stream_search_terms() # load unsanitized search terms\n",
     "    for raw_page in unsanitized_search_term_stream:\n",
     "        total_run += raw_page.shape[0]\n",
+    "        \n",
+    "        one_percent_sample = raw_page.sample(frac = 0.01)\n",
+    "        data_validation_sample = data_validation_sample.append(one_percent_sample)\n",
+    "\n",
     "        pii_in_query_mask, run_data, language_data = await detect_pii(raw_page['query'], census_surnames)\n",
     "        sanitized_page = raw_page.loc[~numpy.array(pii_in_query_mask)] # ~ reverses the mask so we get the queries WITHOUT PII in them\n",
     "        total_deemed_sanitary += sanitized_page.shape[0]\n",
@@ -195,9 +203,11 @@
     "        summary_run_data = dict(functools.reduce(operator.add,\n",
     "                            map(collections.Counter, [summary_run_data, run_data])))\n",
     "                \n",
-    "        yesterday = datetime.utcnow().date() - timedelta(days=1)\n",
     "        export_search_queries_to_bigquery(dataframe=sanitized_page, destination_table_id=args.sanitized_term_destination, date=yesterday)\n",
+    "    \n",
     "    end_time = datetime.utcnow()\n",
+    "    \n",
+    "    export_sample_to_bigquery(dataframe=data_validation_sample, sample_table_id=args.unsanitized_term_sample_destination, date=yesterday)\n",
     "    \n",
     "    implementation_notes = \"Run with a page_size of 300k\" \n",
     "    record_job_metadata(status='SUCCESS', started_at=start_time, ended_at=end_time, destination_table=args.job_reporting_destination, total_run=total_run, total_rejected=total_run - total_deemed_sanitary, run_data=summary_run_data, language_data=summary_language_data, implementation_notes=implementation_notes)\n",
