Bypass sanitization strategy for allow listed search terms. Steps:
1. Set aside all search terms that appear in the admarketplace allow list table
2. Run the sanitization strategy on the remaining terms
3. Export both the terms from 1 and the terms that pass the sanitization strategy from 2 into the sanitized query table

--- a/nightly-job/nightly-sanitization-pipeline.ipynb
+++ b/nightly-job/nightly-sanitization-pipeline.ipynb
@@ -62,7 +62,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[]]\n"
+      "DATAFRAME COLS AT EXPORT\n",
+      "Index(['timestamp', 'request_id', 'session_id', 'sequence_no', 'query',\n",
+      "       'country', 'region', 'dma', 'form_factor', 'browser', 'os_family'],\n",
+      "      dtype='object')\n",
+      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n"
      ]
     },
     {
@@ -76,7 +80,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[]]\n"
+      "DATAFRAME COLS AT EXPORT\n",
+      "Index(['timestamp', 'request_id', 'session_id', 'sequence_no', 'query',\n",
+      "       'country', 'region', 'dma', 'form_factor', 'browser', 'os_family'],\n",
+      "      dtype='object')\n",
+      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n"
      ]
     },
     {
@@ -90,7 +98,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[]]\n"
+      "DATAFRAME COLS AT EXPORT\n",
+      "Index(['timestamp', 'request_id', 'session_id', 'sequence_no', 'query',\n",
+      "       'country', 'region', 'dma', 'form_factor', 'browser', 'os_family'],\n",
+      "      dtype='object')\n",
+      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n"
      ]
     },
     {
@@ -104,7 +116,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[]]\n"
+      "DATAFRAME COLS AT EXPORT\n",
+      "Index(['timestamp', 'request_id', 'session_id', 'sequence_no', 'query',\n",
+      "       'country', 'region', 'dma', 'form_factor', 'browser', 'os_family'],\n",
+      "      dtype='object')\n",
+      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n"
      ]
     },
     {
@@ -118,135 +134,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[]]\n",
-      "EXPORTING SAMPLE NOW\n",
-      "[[]]\n",
+      "DATAFRAME COLS AT EXPORT\n",
+      "Index(['timestamp', 'request_id', 'session_id', 'sequence_no', 'query',\n",
+      "       'country', 'region', 'dma', 'form_factor', 'browser', 'os_family'],\n",
+      "      dtype='object')\n",
+      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n",
+      "[[], [], []]\n",
       "New row representing job run successfully added.\n"
      ]
     }
@@ -272,9 +165,12 @@
     "        \n",
     "        one_percent_sample = raw_page.sample(frac = 0.01)\n",
     "        data_validation_sample = data_validation_sample.append(one_percent_sample)\n",
+    "        \n",
+    "        allow_listed_terms_page = raw_page.loc[raw_page.present_in_allow_list]\n",
+    "        unsanitized_unallowlisted_terms = raw_page.loc[~raw_page.present_in_allow_list]\n",
     "\n",
-    "        pii_in_query_mask, run_data, language_data = await detect_pii(raw_page['query'], census_surnames)\n",
-    "        sanitized_page = raw_page.loc[~numpy.array(pii_in_query_mask)] # ~ reverses the mask so we get the queries WITHOUT PII in them\n",
+    "        pii_in_query_mask, run_data, language_data = await detect_pii(unsanitized_unallowlisted_terms['query'], census_surnames)\n",
+    "        sanitized_page = unsanitized_unallowlisted_terms.loc[~numpy.array(pii_in_query_mask)] # ~ reverses the mask so we get the queries WITHOUT PII in them\n",
     "        total_deemed_sanitary += sanitized_page.shape[0]\n",
     "        \n",
     "        summary_language_data = dict(functools.reduce(operator.add,\n",
@@ -282,10 +178,14 @@
     "        summary_run_data = dict(functools.reduce(operator.add,\n",
     "                            map(collections.Counter, [summary_run_data, run_data])))\n",
     "                \n",
-    "        export_search_queries_to_bigquery(dataframe=sanitized_page, destination_table_id=args.sanitized_term_destination, date=yesterday)\n",
+    "        all_terms_to_keep = pd.concat([allow_listed_terms_page, sanitized_page])\n",
+    "        all_terms_to_keep = all_terms_to_keep.drop(columns=['present_in_allow_list'])\n",
+    "        \n",
+    "        export_search_queries_to_bigquery(dataframe=all_terms_to_keep, destination_table_id=args.sanitized_term_destination, date=yesterday)\n",
     "    \n",
     "    end_time = datetime.utcnow()\n",
     "    \n",
+    "    data_validation_sample = data_validation_sample.drop(columns=['present_in_allow_list'])\n",
     "    export_sample_to_bigquery(dataframe=data_validation_sample, sample_table_id=args.unsanitized_term_sample_destination, date=yesterday)\n",
     "    \n",
     "    implementation_notes = \"Run with a page_size of 300k\" \n",
