Add allowlisted terms to total terms deemed sanitary

--- a/nightly-job/nightly-sanitization-pipeline.ipynb
+++ b/nightly-job/nightly-sanitization-pipeline.ipynb
@@ -171,7 +171,7 @@
     "\n",
     "        pii_in_query_mask, run_data, language_data = await detect_pii(unsanitized_unallowlisted_terms['query'], census_surnames)\n",
     "        sanitized_page = unsanitized_unallowlisted_terms.loc[~numpy.array(pii_in_query_mask)] # ~ reverses the mask so we get the queries WITHOUT PII in them\n",
-    "        total_deemed_sanitary += sanitized_page.shape[0]\n",
+    "        total_deemed_sanitary += (sanitized_page.shape[0] + allow_listed_terms_page.shape[0])\n",
     "        \n",
     "        summary_language_data = dict(functools.reduce(operator.add,\n",
     "                            map(collections.Counter, [summary_language_data, language_data])))\n",
