separate the mean and range test windows

--- a/nightly-job/data-validation-checks.ipynb
+++ b/nightly-job/data-validation-checks.ipynb
@@ -39,8 +39,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "890a8c1a-6a23-478e-beef-f7fbd469e5b6",
+   "metadata": {},
+   "source": [
+    "If, in this next cell containing `record_validation_results`, you receive an error about the range_low being NaN, the problem is probably that you have not populated the data in staging. This code operates on the last X days of data, and if it has been that long since any staging data was added, there's no data for it to operate on. The script assumes data is there and should not succeed if there is no data, because that hides a SUPER big issue, so please do not just default the NaNs to zero in the code. \n",
+    "\n",
+    "Instead, what you actually need to do here is go run the notebook in this folder called `mimic-production-tables-in-mozdata.ipynb`, which will populate the data that this script expects to be present when it runs."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f0754f05-7900-4a1b-9d5f-e912c1fa0fd7",
    "metadata": {},
    "outputs": [
