--- a/nightly-job/mimic-production-tables-in-mozdata.ipynb
+++ b/nightly-job/mimic-production-tables-in-mozdata.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a3ce7d40-19be-4f9d-9940-35aef9a299f2",
    "metadata": {},
    "outputs": [],
@@ -61,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "8af53737-6df8-44bb-8604-7c4cac28475a",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from query_sanitization import stream_search_terms, detect_pii, export_search_queries_to_bigquery, record_job_metadata\n",
+    "from query_sanitization import stream_search_terms, detect_pii, export_search_queries_to_bigquery, record_job_metadata, export_sample_to_bigquery\n",
     "import numpy\n",
     "from datetime import datetime, timedelta\n",
     "import pandas as pd\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "9a3f9576-5934-43b7-a431-166613754d3d",
    "metadata": {
     "tags": []
@@ -97,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n"
+      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n"
      ]
     },
     {
@@ -111,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n"
+      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n"
      ]
     },
     {
@@ -125,7 +125,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n"
+      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n",
+      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n"
      ]
     },
     {
@@ -139,7 +154,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n"
+      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n"
      ]
     },
     {
@@ -153,22 +168,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n",
+      "[[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]\n",
       "New row representing job run successfully added.\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'export_sample_to_bigquery' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_18966/2849032740.py\u001b[0m in \u001b[0;36masync-def-wrapper\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_18966/2849032740.py\u001b[0m in \u001b[0;36masync-def-wrapper\u001b[0;34m()\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m     \u001b[0mimplementation_notes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Run with a page_size of 300k\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m     \u001b[0mrecord_job_metadata\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstatus\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'SUCCESS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstarted_at\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstart_time\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mended_at\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mend_time\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdestination_table\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjob_reporting_destination\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtotal_run\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtotal_run\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtotal_rejected\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtotal_run\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mtotal_deemed_sanitary\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrun_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msummary_run_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlanguage_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msummary_language_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimplementation_notes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mimplementation_notes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m     \u001b[0;31m# TODO: Make this more robust in actual failure cases\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'export_sample_to_bigquery' is not defined"
      ]
     }
    ],
@@ -228,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "6d84e23f-f7f8-4cdd-a350-65428a30f5ec",
    "metadata": {},
    "outputs": [],
@@ -238,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "456292d1-5b22-4bcb-8b54-183389d9bbc4",
    "metadata": {},
    "outputs": [],
@@ -272,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "5b218d3a-ef16-4cf2-bcf6-4ea312b6ac03",
    "metadata": {
     "tags": []
@@ -284,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ffc5aca5-bb6f-43ee-b865-a971ad38edc8",
    "metadata": {
     "tags": []
@@ -296,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "42a70eaf-ec64-4f32-b47b-4795268bf3d8",
    "metadata": {},
    "outputs": [],
@@ -306,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "c2cf5970-f7c3-4994-b369-fac7daeae8ee",
    "metadata": {},
    "outputs": [
