Add blocking categories CSV

--- a/non_sensitive/wikipedia-content-moderation/wikipedia-exploration.ipynb
+++ b/non_sensitive/wikipedia-content-moderation/wikipedia-exploration.ipynb
@@ -5079,12 +5079,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 619,
    "id": "eff34f64-11ce-4407-b0bc-2857f656d4de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "BLOCKLIST_PKL = OUTPUT_DIR / \"blockist_cats.pkl\""
+    "BLOCKLIST_CSV = \"blockist_cats.csv\""
    ]
   },
   {
@@ -5340,12 +5340,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 561,
+   "execution_count": 618,
    "id": "38e2c07d-788f-4521-a059-7d294e49a2d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "blocklist_final.to_pickle(BLOCKLIST_PKL)"
+    "blocklist_final.to_csv(BLOCKLIST_CSV, index=False)"
    ]
   },
   {
