--- a/non_sensitive/wikipedia-content-moderation/wikipedia-exploration.ipynb
+++ b/non_sensitive/wikipedia-content-moderation/wikipedia-exploration.ipynb
@@ -5084,7 +5084,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BLOCKLIST_CSV = \"blockist_cats.csv\""
+    "BLOCKLIST_CSV = \"blocklist_cats.csv\""
    ]
   },
   {
