Fix up wikipedia exclusions

--- a/non_sensitive/wikipedia-content-moderation/wikipedia-exploration.ipynb
+++ b/non_sensitive/wikipedia-content-moderation/wikipedia-exploration.ipynb
@@ -41,12 +41,6 @@
     "\n",
     "tqdm.pandas()\n",
     "\n",
-    "_ = gg.theme_set(gg.theme_light())\n",
-    "# Better quality plots\n",
-    "from matplotlib_inline.backend_inline import set_matplotlib_formats\n",
-    "set_matplotlib_formats(\"svg\")\n",
-    "\n",
-    "\n",
     "def display_pd(x, rows=None, cols=None, colwidth=None, seqitems=None, full=True):\n",
     "    \"\"\"Display pandas object with different display settings.\"\"\"\n",
     "    opts = []\n",
@@ -274,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "aa920628-e30d-478b-bf1a-6de25cca15b2",
    "metadata": {},
    "outputs": [],
@@ -1486,6 +1480,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3d58e68a-1453-4e00-8bd4-861c1d427d57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_cats = pd.read_pickle(CAT_DF_PKL)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "23500435-396a-4045-97c7-03ec8dab42a4",
    "metadata": {},
@@ -1501,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 5,
    "id": "b6c3fb02-e9cb-4c38-9b5d-c6220dab032c",
    "metadata": {},
    "outputs": [],
@@ -1578,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 6,
    "id": "fe0f0ed2-67d2-48cc-88b7-04a15de27a99",
    "metadata": {},
    "outputs": [],
@@ -1649,10 +1653,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1b5ef4c0-9aa4-480c-b356-9fae23038275",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Level: 7\r"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>seed</th>\n",
+       "      <th>parent</th>\n",
+       "      <th>level</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Coffee with milk politics</td>\n",
+       "      <td>Coffee with milk politics</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Coffee and Tea Taskforce</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Coffee liqueurs</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Coffee organisations</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155</th>\n",
+       "      <td>Hear Music albums</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>Starbucks in popular culture</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>Hear Music compilation albums</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>Hear Music albums</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>Hear Music live albums</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>Hear Music albums</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158</th>\n",
+       "      <td>Hear Music soundtracks</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>Hear Music albums</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>Hear Music video albums</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>Hear Music albums</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>160 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              name                       seed  \\\n",
+       "0        Coffee with milk politics  Coffee with milk politics   \n",
+       "1                           Coffee                     Coffee   \n",
+       "2         Coffee and Tea Taskforce                     Coffee   \n",
+       "3                  Coffee liqueurs                     Coffee   \n",
+       "4             Coffee organisations                     Coffee   \n",
+       "..                             ...                        ...   \n",
+       "155              Hear Music albums                     Coffee   \n",
+       "156  Hear Music compilation albums                     Coffee   \n",
+       "157         Hear Music live albums                     Coffee   \n",
+       "158         Hear Music soundtracks                     Coffee   \n",
+       "159        Hear Music video albums                     Coffee   \n",
+       "\n",
+       "                           parent  level  \n",
+       "0                            None      0  \n",
+       "1                            None      0  \n",
+       "2                            None      0  \n",
+       "3                            None      0  \n",
+       "4                            None      0  \n",
+       "..                            ...    ...  \n",
+       "155  Starbucks in popular culture      5  \n",
+       "156             Hear Music albums      6  \n",
+       "157             Hear Music albums      6  \n",
+       "158             Hear Music albums      6  \n",
+       "159             Hear Music albums      6  \n",
+       "\n",
+       "[160 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "category_bfs(\n",
     "    [\"Coffee with milk politics\"],\n",
@@ -5089,7 +5245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 650,
    "id": "189c65e8-1958-427e-9157-ed50b9a9f9b8",
    "metadata": {},
    "outputs": [],
@@ -5146,6 +5302,7 @@
     "    \"Amputations\",\n",
     "    \"Fictional torturers\",\n",
     "    \"Works about torture\",\n",
+    "    \"Operation Condor\",\n",
     "    # Child abuse exclusions:\n",
     "    \"Child abuse law\",\n",
     "    \"Child abuse-related organizations\",\n",
@@ -5179,6 +5336,7 @@
     "    # Torture exclusions:\n",
     "    \"\\\\banti-torture\\\\b\",\n",
     "    \"\\\\btorture victims?\\\\b\",\n",
+    "    \"\\\\bhuman rights activ\",\n",
     "    # Slurs/Pejorative exclusions:\n",
     "    # cultural/historical\n",
     "    \"\\\\beskimo\",\n",
