Refactor python utils for Wikipedia

--- a/non_sensitive/wikipedia-content-moderation/build_category_index.ipynb
+++ b/non_sensitive/wikipedia-content-moderation/build_category_index.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "import category"
+    "from wikipedia_utils import category"
    ]
   },
   {
